# gamestuff

./: .cproject  .gitmodules  .project  CMakeLists.txt  README.md  build_hexago.sh
HexEngine/: CMakeLists.txt
HexEngine/src/: ClickManager.hpp  Geometry.hpp  Grid.hpp  Hex.hpp  Trigonometry.hpp
HexEngine/src/Clickable/: AbstractClickable.cpp  AbstractClickable.hpp  IClickable.hpp
HexEngine/src/Coordinates/: Axial.cpp  Axial.hpp  GridUtils.hpp
HexEngine/test/: CMakeLists.txt
HexEngine/test/src/: main.cpp
HexaGo/: CMakeLists.txt
HexaGo/src/: Board.cpp  Board.hpp  BoardAction.cpp  BoardAction.hpp  BoardOperations.cpp  BoardOperations.hpp  IBoardOperation.hpp  Model.cpp  Model.hpp  ModelItf.hpp  Tile.hpp  Utils.cpp  Utils.hpp  View.cpp  View.hpp  main.cpp
NetworkingPOC/: CMakeLists.txt
NetworkingPOC/client/: CMakeLists.txt
NetworkingPOC/client/src/: main.cpp
NetworkingPOC/lib/: CMakeLists.txt
NetworkingPOC/lib/src/: Serializable.cpp  Serializable.hpp
NetworkingPOC/server/: CMakeLists.txt
NetworkingPOC/server/src/: main.cpp
